Converted SkillLadder to use RunArgs