@@ -3,10 +3,7 @@ package evaluation;
 import org.json.simple.JSONObject;
 
 import java.io.File;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
@@ -65,7 +62,7 @@ public enum RunArg {
             new Usage[]{Usage.RunGames, Usage.ParameterSearch}),
     iterations("The number of iterations of NTBEA to run (default is 1000)",
             1000,
-            new Usage[]{Usage.ParameterSearch}),
+            new Usage[]{Usage.ParameterSearch, Usage.SkillLadder}),
     kExplore("The k to use in NTBEA - defaults to 1.0 - this makes sense for win/lose games with a score in {0, 1}\n" +
             "\tFor scores with larger ranges, we recommend scaling kExplore appropriately.",
             1.0,
@@ -81,7 +78,7 @@ public enum RunArg {
             "\t...or the number of matchups to run per combination of players if mode=exhaustive\n" +
             "\tfor NTBEA this will be used as a final tournament between the recommended agents from each run.",
             1,
-            new Usage[]{Usage.RunGames, Usage.ParameterSearch}),
+            new Usage[]{Usage.RunGames, Usage.ParameterSearch, Usage.SkillLadder}),
     metrics("(Optional) The full class name of an IMetricsCollection implementation. " +
             "\t The recommended usage is to include these in the JSON file that defines the listener,\n" +
             "\t but this option is here for quick and dirty tests.",
@@ -144,7 +141,7 @@ public enum RunArg {
             System.currentTimeMillis(),
             new Usage[]{Usage.RunGames, Usage.ParameterSearch}),
     seedFile("(Optional) A file containing a list of random seeds to use for individual games. \n" +
-            "\t If this is specified, then the 'seed' and `distinctRandomSeed` arguments are ignored. \n"+
+            "\t If this is specified, then the 'seed' and `distinctRandomSeed` arguments are ignored. \n" +
             "\t Each seed will be used in turn for a full tournament run, as defined by the other parameters.",
             "",
             new Usage[]{Usage.RunGames}),
@@ -152,6 +149,31 @@ public enum RunArg {
             "\t Defaults to false",
             false,
             new Usage[]{Usage.RunGames}),
+    tuningBudget("The number of games to be played in total for each tuning process. \n" +
+            "\t One tuning process is run for each iteration of SkillLadder.\n",
+            1000,
+            new Usage[]{Usage.SkillLadder}),
+    startBudget("The starting budget for the SkillLadder process. \n",
+            8,
+            new Usage[]{Usage.SkillLadder}),
+    multiplier("The multiplier for budget at each iteration of the SkillLadder process. \n",
+            2,
+            new Usage[]{Usage.SkillLadder}),
+    grid("If true, then we compare the current best agent against all previous budget levels. \n" +
+            "\t If false, then we just compare against the previous budget level.\n",
+            false,
+            new Usage[]{Usage.SkillLadder}),
+    gridStart("If provided we start calculating from the specified budget level. \n" +
+            "\tThe default is to start from the startBudget, which is always where\n" +
+            "\t the number of iterations are calculated from.\n",
+            0,
+            new Usage[]{Usage.SkillLadder}),
+    gridMinorStart("""
+            Only relevant if grid is true, and gridStart != 0
+            \tThis is the minor grid budget start level.\s
+            """,
+            0,
+            new Usage[]{Usage.SkillLadder}),
     tuneGame("If true, then we will tune the game instead of tuning the agent.\n" +
             "\tIn this case the searchSpace file must be relevant for the game.",
             false,
@@ -170,7 +192,7 @@ public enum RunArg {
 
 
     public enum Usage {
-        RunGames, ParameterSearch
+        RunGames, ParameterSearch, SkillLadder
     }
 
     RunArg(String helpText, Object defaultValue, Usage[] when) {
@@ -203,24 +225,24 @@ public enum RunArg {
         return value;
     }
 
-    public static Map<RunArg, Object> parseConfig(String[] args, Usage usage) {
-        return RunArg.parseConfig(args, usage, true);
+    public static Map<RunArg, Object> parseConfig(String[] args, List<Usage> usages) {
+        return RunArg.parseConfig(args, usages, true);
     }
 
-    public static Map<RunArg, Object> parseConfig(String[] args, Usage usage, boolean checkUnknownArgs) {
+    public static Map<RunArg, Object> parseConfig(String[] args, List<Usage> usages, boolean checkUnknownArgs) {
         if (checkUnknownArgs)
-            checkUnknownArgs(args, usage);
+            checkUnknownArgs(args, usages);
         return Arrays.stream(RunArg.values())
-                .filter(arg -> arg.isUsedIn(usage))
+                .filter(arg ->  usages.stream().anyMatch(arg::isUsedIn))
                 .collect(toMap(arg -> arg, arg -> arg.parse(args)));
     }
 
-    public static void checkUnknownArgs(String[] args, Usage usage) {
+    public static void checkUnknownArgs(String[] args, List<Usage> usages) {
         List<String> possibleArgs = Arrays.stream(RunArg.values())
-                .filter(arg -> arg.isUsedIn(usage))
+                .filter(arg -> usages.stream().anyMatch(arg::isUsedIn))
                 .map(RunArg::name)
-                .collect(toList());
-        List<String> keys = Arrays.stream(args).map(s -> s.split("=")[0]).collect(toList());
+                .toList();
+        List<String> keys = Arrays.stream(args).map(s -> s.split("=")[0]).toList();
         keys.stream().filter(arg -> !possibleArgs.contains(arg))
                 .forEach(arg -> System.out.println("Unknown argument: " + arg));
     }
@@ -228,9 +250,18 @@ public enum RunArg {
     @SuppressWarnings("unchecked")
     public static Map<RunArg, Object> parseConfig(JSONObject json, Usage usage) {
         String[] keyNames = (String[]) json.keySet().stream().map(Object::toString).toArray(String[]::new);
-        checkUnknownArgs(keyNames, usage);
+        checkUnknownArgs(keyNames, Collections.singletonList(usage));
         return Arrays.stream(RunArg.values())
                 .filter(arg -> arg.isUsedIn(usage))
+                .collect(toMap(arg -> arg, arg -> arg.parse(json)));
+    }
+
+    @SuppressWarnings("unchecked")
+    public static Map<RunArg, Object> parseConfig(JSONObject json, List<Usage> usages) {
+        String[] keyNames = (String[]) json.keySet().stream().map(Object::toString).toArray(String[]::new);
+        checkUnknownArgs(keyNames, usages);
+        return Arrays.stream(RunArg.values())
+                .filter(arg ->  usages.stream().anyMatch(arg::isUsedIn))
                 .collect(toMap(arg -> arg, arg -> arg.parse(json)));
     }
 
